--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
         </div>
         <div class="login">
             <div class="title"><span>Login</span></div>
-            <div class="title"><input type="text" placeholder="Username"></div>
-            <div class="title"><input type="password" placeholder="Password"></div>
+            <div class="title"><input type="text" placeholder="Username --- #HoangNguyen"></div>
+            <div class="title"><input type="password" placeholder="Password --- #HoangNguyen"></div>
             <div class="title"><button>Confirm</button></div>
             <div class="title">
                 <div class="remember"><input type="checkbox" id="rememberCheckbox">
